fix: update justia deks spacing

--- a/src/scss/main/_widgets.scss
+++ b/src/scss/main/_widgets.scss
@@ -313,6 +313,10 @@
         }
     }
 
+    .title {
+        min-height: 72px;
+    }
+
     .-subscribe {
         padding: 0 0 25px;
 
